<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/auth_bg_1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.lipalater.androidapp.ui.widgets.Indicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/buyNowTitle"
            style="@style/BuyNow"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/label_buy_now"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".65" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/label_sign_up"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buyNowTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:text="@string/label_log_in"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            app:backgroundTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUpButton"
            app:rippleColor="@color/colorPrimaryRipple" />

        <TextView
            android:id="@+id/legalese"
            style="@style/Legalese"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/legalese"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
