<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <ImageView
        android:id="@+id/cancelImageView"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewOpenedEmail"
        android:layout_width="208dp"
        android:layout_height="208dp"
        android:src="@drawable/ic_openedemail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233" />

    <TextView
        android:id="@+id/textViewVerifyEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/brfirmasemibold"
        android:gravity="center_horizontal"
        android:text="Verify your email"
        android:textColor="#00376b"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/textViewVerifyLongText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewOpenedEmail" />

    <TextView
        android:id="@+id/textViewVerifyLongText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/brfirmamedium"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="4sp"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/verifyemail_longText"
        android:textColor="#72809d"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewVerifyEmail" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/openemailButton"
        app:layout_constraintTop_toBottomOf="@id/textViewVerifyLongText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brfirmasemibold"
            android:gravity="center_horizontal"
            android:text="@string/didn_t_get_the_mail"
            android:textColor="#00376b"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:fontFamily="@font/brfirmasemibold"
            android:gravity="center_horizontal"
            android:text="@string/send_again"
            android:textColor="#88b840"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.lipalater.androidapp.ui.widgets.ProgressButton
        android:id="@+id/openemailButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:btnText="@string/label_openemail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
